tests/machine/x/go/cast_string_to_int.error
Error on line 0: run error: exit status 1
panic: interface conversion: interface {} is string, not int

goroutine 1 [running]:
main._cast[...](...)
	/workspace/mochi/tests/machine/x/go/cast_string_to_int.go:14
main.main()
	/workspace/mochi/tests/machine/x/go/cast_string_to_int.go:10 +0x7a
exit status 2

1: //go:build ignore
